Fixes welcome page stylings on small screens and updates logo path for gh pages site

--- a/src/app/welcome-page/welcome-page.component.scss
+++ b/src/app/welcome-page/welcome-page.component.scss
@@ -27,6 +27,7 @@ button:hover {
 button {
   width: 200px;
   margin: 10px;
+  padding: 10px;
 }
 
 .welcome-container {
